@@ -106,34 +106,20 @@ public class WebSecurityConfig {
         // Add a filter to validate the tokens with every request
         httpSecurity.addFilterBefore(jwtRequestFilter, UsernamePasswordAuthenticationFilter.class);
         
-        httpSecurity.cors(Customizer.withDefaults());
         
-        CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
-        corsConfiguration.setAllowedOrigins(Arrays.asList("*"));
-//        corsConfiguration.setAllowedOrigins(List.of(aProp.getProperty("api.alloworigin"),aProp.getProperty("api.allowadminorigin"),aProp.getProperty("api.allowauthorigin")));
-        corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE","OPTIONS", "PUT", "PATCH", "DELETE"));
-        corsConfiguration.setAllowCredentials(true);
-        corsConfiguration.setExposedHeaders(List.of("Authorization"));
+        httpSecurity.cors(cors -> cors.configurationSource(request -> {
+            CorsConfiguration configuration = new CorsConfiguration();
+            configuration.applyPermitDefaultValues();
+            configuration.setAllowedOrigins(Arrays.asList("*"));
+            configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+            configuration.setAllowedHeaders(Arrays.asList("Authorization", "lang", "Cache-Control", "Content-Type"));
+            configuration.setExposedHeaders(Arrays.asList("Authorization", "lang"));
+            return configuration;
+        }));
         
         return httpSecurity.build();
     }
     
-	@Bean
-	public CorsConfigurationSource corsConfigurationSource() {
-
-	    final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-	    CorsConfiguration config = new CorsConfiguration();
-	    source.registerCorsConfiguration("/**", config.applyPermitDefaultValues());
-	    config.addAllowedMethod("PUT");
-//	     config.addAllowedMethod("POST");
-	    //allow Authorization to be exposed
-	    config.setExposedHeaders(Arrays.asList("Authorization", "cookieName", "headerName"));
-
-
-
-	    return source;
-	}
 
 
 }
